ingress/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aycap-spring-ingress
spec:
  rules:
  - host: aycap-spring.apps.180.222.156.218.xip.io
    http:
      paths:
      - backend:
          serviceName: aycap-spring
          servicePort: 8090
  - host: aycap-spring-91.apps.180.222.156.218.xip.io
    http:
      paths:
      - backend:
          serviceName: aycap-spring-91
          servicePort: 8091
